--- a/crm_sys/templates/login.html
+++ b/crm_sys/templates/login.html
@@ -18,8 +18,13 @@
 <body>
     <div data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" class="login-card" style="font-family:Roboto, sans-serif;">
         <p class="profile-name-card"> <i class="fa fa-unlock-alt d-inline" style="width:0;height:0;font-size:56px;color:rgb(104,145,162);"></i></p>
-        <form class="form-signin"><span class="reauth-email" style="margin:11px;"> </span><input class="form-control" type="email" required="" placeholder="Email address" autofocus="" id="inputEmail"><input class="form-control" type="password" required="" placeholder="Password"
-                id="inputPassword"><a class="btn btn-primary btn-block btn-lg btn-signin" role="button" href="customer" style="font-family:Roboto, sans-serif;font-size:16px;font-weight:normal;font-style:normal;">Sign in</a></form>
+        <form class="form-signin" method="post" action="login/">
+            {% csrf_token %}
+            <span class="reauth-email" style="margin:11px;">
+        </span><input
+                class="form-control" type="email" required="" placeholder="Email address" autofocus="" id="inputEmail"><input class="form-control" type="password" required="" placeholder="Password"
+                id="inputPassword"><button type="submit" class="btn btn-primary btn-block btn-lg btn-signin"
+                                      style="font-family:Roboto, sans-serif;font-size:16px;font-weight:normal;font-style:normal;">Sign in</button></form>
         <p class="text-center"
             style="color:rgb(73,80,87);font-size:11px;">Restricted Area</p>
     </div>
