--- a/crm_sys/templates/customer.html
+++ b/crm_sys/templates/customer.html
@@ -30,8 +30,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-9 offset-lg-0"><nav class="navbar navbar-light bg-light">
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+  <form class="form-inline" action="search" method="get">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search"
+           id="search">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
   </form>
 </nav>
@@ -54,7 +55,7 @@
                 <td>{{ customer.phone }}</td>
                 <td>{{ customer.ssd }}</td>
                 <td>{{ customer.access_speed }}</td>
-                <td>{{ customer.subscriptions }}</td>
+                <td>{{ customer.subscriptions_ }}</td>
                 <td><div class="form-check">
   <input class="form-check-input" disabled
          {% if customer.is_active == True %}
