--- a/crm_sys/templates/profile.html
+++ b/crm_sys/templates/profile.html
@@ -39,6 +39,12 @@
 
                         <button type="submit" class="btn">Update</button>
                     </form>
+                    <form method="POST" action=/customer/profile/{{customer.ssd}}/>
+                        {% csrf_token %}
+                        {{ subscriptions_form.as_p }}
+
+                        <button type="submit" class="btn">Update</button>
+                    </form>
 
                 </div>
             </div>
