--- a/crm_sys/templates/customer.html
+++ b/crm_sys/templates/customer.html
@@ -22,7 +22,8 @@
                     class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
-                    <ul class="nav navbar-nav mr-auto"></ul><span class="navbar-text actions"> <a href="#" class="login">logout</a></span></div>
+                    <ul class="nav navbar-nav mr-auto"></ul><span class="navbar-text actions"> <a href="/logout/"
+                                                                                                  class="login">logout</a></span></div>
             </div>
         </nav>
     </div>
